force-app/main/default/objects/Payment_Processing_Settings__c/Payment_Processing_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Payment Processing Settings</description>
    <label>Payment Processing Settings</label>
</CustomObject>