force-app/main/default/objects/Payment_Processing_Settings__c/fields/Memo_Details__c.field-meta.xml
<CustomField>
    <fullName>Memo_Details__c</fullName>
    <description>Memo Details</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Memo Details</inlineHelpText>
    <label>Memo Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>