force-app/main/default/objects/Payment_Processing_Settings__c/fields/VersaPay_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Auth_Token__c</fullName>
    <description>VersaPay Auth Token</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>VersaPay Auth Token</inlineHelpText>
    <label>VersaPay Auth Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>