force-app/main/default/objects/Payment_Processing_Settings__c/fields/VersaPay_Auth_Token_Debit__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Auth_Token_Debit__c</fullName>
    <description>VersaPay Auth Token Debit</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>VersaPay Auth Token Debit</inlineHelpText>
    <label>VersaPay Auth Token Debit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>