force-app/main/default/objects/Payment_Processing_Settings__c/fields/VersaPay_End_Point__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_End_Point__c</fullName>
    <description>VersaPay End Point</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>VersaPay End Point</inlineHelpText>
    <label>VersaPay End Point</label>
    <length>50</length>
    <type>Text</type>
</CustomField>