force-app/main/default/objects/Payment_Processing_Settings__c/fields/VersaPay_Signing_Key__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Signing_Key__c</fullName>
    <description>VersaPay Signing Key</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>VersaPay Signing Key</inlineHelpText>
    <label>VersaPay Signing Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>