force-app/main/default/objects/Payment_Processing_Settings__c/fields/Webhook_Listener_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Listener_URL__c</fullName>
    <description>Webhook Listener URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Webhook Listener URL</inlineHelpText>
    <label>Webhook Listener URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>